--- a/index.html
+++ b/index.html
@@ -92,14 +92,25 @@
             background-color: var(--cor-laranja-hover);
         }
         
+        /* ======================================================= */
+        /* == MUDANÇA DE ESTILO DOS BOTÕES "CANCELAR EDIÇÃO" ===== */
+        /* ======================================================= */
         button.btn-cancelar {
-            background-color: #555;
-            color: var(--cor-texto);
+            background-color: transparent; /* Fundo transparente */
+            color: var(--cor-laranja); /* Texto laranja */
+            border: 2px solid var(--cor-laranja); /* Borda laranja */
             margin-left: 10px;
+            /* Ajusta o padding para alinhar com o botão principal */
+            padding: 10px 18px; 
         }
         button.btn-cancelar:hover {
-            background-color: #777;
+            background-color: var(--cor-laranja-hover); /* Fica laranja ao passar o mouse */
+            color: #000; /* Texto preto, como o botão principal */
+            border-color: var(--cor-laranja-hover);
         }
+        /* ======================================================= */
+        /* ======================================================= */
+
 
         .coluna {
             width: 48%;
